# executionkit

./: .gitignore  .mailmap  .pre-commit-config.yaml  404.html  AGENTS.md  BACKLOG.md  BUILD_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PORTFOLIO.md  README.md  REVIEW_AUDIT.md  ROADMAP_V2.md  SECURITY.md  coverage.xml  evaluation_result.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sbom.json  sitemap.xml  sonar-project.properties  tags.json
.claude/: C4Container.mmd  README.md  Untitled-2.mmd  Untitled-3.mmd  settings.local.json
.claude/skills/add-pattern/: SKILL.md
.claude/skills/release/: SKILL.md
.full-review/: 00-scope.md  01-quality-architecture.md  03-testing-documentation.md  05-final-report.md  1a-code-quality.md  2a-security.md  2b-performance.md  3b-documentation.md  4a-best-practices.md  4b-cicd.md  README.md  state.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-eval.yml  codeql.yml  deploy-docs.yml  docs.yml  live-eval.yml  pages.yml  publish.yml
.serena/: README.md  project.yml
_analysis/: CLAIMS.md  DRIFT_REPORT.md  SUBPROJECT_LIST.md
api/adapters/: index.html
api/configuration/: index.html
api/core/: index.html
changelog/: index.html
contributing/: index.html
dev/: BUILD_SPEC.md  PORTFOLIO_BACKLOG.md  ROADMAP_V2.md  evaluation_result.md
dev/_analysis/: CLAIMS.md
dev/planning/: Repo Name Suggestions.docx  SHIP_DECISION.md  TIER1_SCAFFOLD.md
docs/: api-reference.md  architecture.md  changelog.md  contributing.md  custom-providers.md  index.md  license.md  quick-start.md
docs/adr/: 001-structural-protocols.md  002-flat-layout.md  003-single-provider.md  004-zero-runtime-dependencies.md  005-caller-supplied-cost-rates.md  006-eval-failure-corpus.md  007-async-first-sync-wrappers.md  008-workflow-checkpoint-resume.md  009-approval-gate-timeout-policy.md  010-optional-otel-span-emission.md  011-map-reduce-pattern.md  012-stdlib-mcp-server.md  013-claude-in-ci-eval.md  014-message-batches.md  015-react-loop-tool-sandbox.md  README.md
docs/analysis/: REPO_ANALYSIS_2026-05-07.md
docs/api/: adapters.md  configuration.md  core.md
docs/c4/: c4-code-examples.html  c4-code-examples.md  c4-code-src-executionkit-engine.md  c4-code-src-executionkit-patterns.md  c4-code-src-executionkit.md  c4-component-composition-session.md  c4-component-execution-engine.md  c4-component-provider-layer.md  c4-component-reasoning-patterns.md  c4-component-test-dev-utilities.md  c4-component.md  c4-container.md  c4-context.md
docs/getting-started/: installation.md  providers.md  quickstart.md
docs/patterns/: consensus.md  index.md  iterative-refinement.md  map-reduce.md  pipe.md  react-loop.md  react_loop.md  refine_loop.md  structured.md
docs/planning/: MVP_SUMMARY.md  README.md  README_MVP.md  REVIEW_ITERATION_1.md  REVIEW_ITERATION_3.md
docs/recipes/: assistant.md  composition.md  cost-routing.md  failover.md
docs/review-process/: 00-scope.md  02-security-performance.md  04-best-practices.md  1b-architecture.md  3a-testing.md  README.md  SECURITY_AUDIT.md  code-quality-review.md
docs/stylesheets/: console.css  ember.css  extra.css  landing.css  tokens.css
docs/test-audit/: TA-1-patterns-engine-kit.md  TA-2-patterns-engine-kit.md  TA-3-provider-types-sync.md  TA-4-provider-types-sync.md  TA-5-compose-concurrency-infra.md  TA-6-compose-concurrency-infra.md
examples/: consensus_voting.py  conversational_assistant.py  quickstart_ollama.py  quickstart_openai.py  react_tool_use.py  refine_loop_example.py  structured_output.py
executionkit/: __init__.py  _constants.py  _mock.py  approval.py  batches.py  compose.py  cost.py  errors.py  evals.py  kit.py  observability.py  planning.py  provider.py  routing.py  types.py  workflow.py
executionkit/engine/: __init__.py  convergence.py  json_extraction.py  messages.py  parallel.py  rate_bucket.py  retry.py  voting.py
executionkit/mcp/: __init__.py  __main__.py  _constants.py  _demo_tools.py  server.py  tools.py
executionkit/patterns/: __init__.py  base.py  consensus.py  map_reduce.py  react_loop.py  refine_loop.py  structured.py
getting-started/installation/: index.html
getting-started/providers/: index.html
getting-started/quickstart/: index.html
license/: index.html
patterns/: index.html
patterns/consensus/: index.html
patterns/iterative-refinement/: index.html
patterns/pipe/: index.html
patterns/react-loop/: index.html
patterns/structured/: index.html
planning/: FINAL_VERDICT.md  MVP_TIERS.md  PLAN_SIMPLE.md  QUICK_REFERENCE.md  REVIEW_ITERATION_2.md  chatgpt covo.txt  convo.txt
recipes/composition/: index.html
recipes/cost-routing/: index.html
recipes/failover/: index.html
scripts/: check_doc_facts.py  claude_ci_eval.py
search/: search_index.json
site/: astro.config.mjs  package-lock.json  package.json
tests/: conftest.py  eval_datasets.py  eval_failure_cases.py  test_approval.py  test_batches.py  test_claude_ci_eval.py  test_compose.py  test_concurrency.py  test_conversation_eval.py  test_engine.py  test_eval_failure_corpus.py  test_eval_goldens.py  test_eval_live_cases.py  test_eval_metrics.py  test_evals.py  test_exports.py  test_judge_calibration.py  test_kit.py  test_live_regression.py  test_observability.py  test_patterns.py  test_primitives.py  test_provider.py  test_streaming.py  test_sync_and_parse.py  test_sync_wrappers.py  test_types.py  test_workflow.py
tests/engine/: test_messages.py  test_rate_bucket.py  test_voting.py
tests/mcp/: test_mcp_demo_tools.py  test_mcp_server.py  test_mcp_stdio.py  test_mcp_transport.py
tests/patterns/: conftest.py  test_checkpointing.py  test_consensus.py  test_map_reduce.py  test_patterns_common.py  test_react_loop.py  test_react_loop_call_cap.py  test_react_loop_validation.py  test_refine_loop.py  test_structured.py
(+16 files in other folders)
