[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "executionkit"
dynamic = ["version"]
description = "Composable LLM reasoning patterns with budget-aware execution"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
  { name = "ExecutionKit contributors" },
]
keywords = [
  "llm",
  "openai-compatible",
  "reasoning",
  "tool-calling",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.27"]
dev = [
    "bandit[toml]>=1.8",
    "build>=1.2",
    "httpx>=0.27",
    "mypy>=1.18",
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
    "pytest-cov>=7.0",
    "ruff>=0.14.0,<0.15",
]

[project.urls]
Homepage = "https://github.com/your-org/executionkit"
Issues = "https://github.com/your-org/executionkit/issues"
Changelog = "https://github.com/your-org/executionkit/CHANGELOG.md"

[tool.hatch.version]
path = "executionkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["executionkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=executionkit --cov-report=term-missing"
markers = [
    "integration: end-to-end tests that call real LLM APIs (deselect with -m 'not integration')",
    "slow: tests taking more than 5 seconds",
]

[tool.coverage.run]
branch = true
source = ["executionkit"]

[tool.coverage.report]
fail_under = 80
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "raise NotImplementedError",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["executionkit"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = [
    "B101",   # assert statements are fine in tests (already excluded) and internal guards
    "B310",   # urllib.urlopen is intentional — Provider is an HTTP client library
    "B311",   # random.uniform for retry jitter is not a cryptographic use case
]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/", "examples/"]
